--- a/.github/workflows/take-shots.yml
+++ b/.github/workflows/take-shots.yml
@@ -20,3 +20,11 @@ jobs:
       run: |
         playwright install
         shot-scraper shots.yml
+    - name: Commit and push if it changed
+      run: |-
+        git config user.name "Automated"
+        git config user.email "actions@users.noreply.github.com"
+        git add -A
+        timestamp=$(date -u)
+        git commit -m "Latest data: ${timestamp}" || exit 0
+        git push
