--- a/.github/workflows/take-shots.yml
+++ b/.github/workflows/take-shots.yml
@@ -18,6 +18,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run shot-scraper
       run: |
+        pip install playwright
         playwright install
         shot-scraper shots.yml
     - name: Commit and push if it changed
