--- a/.github/workflows/take-shots.yml
+++ b/.github/workflows/take-shots.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        playwright install
+        shot-scraper install
     - name: Run shot-scraper
       run: |
         shot-scraper shots.yml
