--- a/.github/workflows/take-shots.yml
+++ b/.github/workflows/take-shots.yml
@@ -19,7 +19,7 @@ jobs:
         shot-scraper install
     - name: Run shot-scraper
       run: |
-        shot-scraper shots.yml
+        shot-scraper multi shots.yml
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
